--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,53 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+  xmlns:tools="http://schemas.android.com/tools">
 
-    <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.CuidandoDeVocê"
-        tools:targetApi="33">
-        <activity
-            android:name=".AgendarConsulta"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:name=".CadastroMedico"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:name=".CadastroPaciente"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:name=".Inicio"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" />
-        <activity
-            android:name=".SplashScreen"
-            android:exported="true"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  <application
+    android:allowBackup="true"
+    android:dataExtractionRules="@xml/data_extraction_rules"
+    android:fullBackupContent="@xml/backup_rules"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/Theme.CuidandoDeVocê"
+    tools:targetApi="33">
+    <activity
+      android:name=".Familia"
+      android:exported="false"
+      android:screenOrientation="portrait"
+      tools:ignore="LockedOrientationActivity" />
+    <activity
+      android:name=".AgendarConsulta"
+      android:exported="false"
+      android:screenOrientation="portrait"
+      tools:ignore="LockedOrientationActivity" />
+    <activity
+      android:name=".CadastroMedico"
+      android:exported="false"
+      android:screenOrientation="portrait"
+      tools:ignore="LockedOrientationActivity" />
+    <activity
+      android:name=".CadastroPaciente"
+      android:exported="false"
+      android:screenOrientation="portrait"
+      tools:ignore="LockedOrientationActivity" />
+    <activity
+      android:name=".Inicio"
+      android:exported="false"
+      android:screenOrientation="portrait"
+      tools:ignore="LockedOrientationActivity" />
+    <activity
+      android:name=".MainActivity"
+      android:exported="false"
+      android:screenOrientation="portrait"
+      tools:ignore="LockedOrientationActivity" />
+    <activity
+      android:name=".SplashScreen"
+      android:exported="true"
+      android:screenOrientation="portrait"
+      tools:ignore="LockedOrientationActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
