--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
     android:usesCleartextTraffic="true"
     tools:targetApi="33">
     <activity
+      android:name=".ForgotPassword"
+      android:exported="false" />
+    <activity
       android:name=".Notificacoes"
       android:exported="false"
       android:screenOrientation="portrait"
