--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
   xmlns:tools="http://schemas.android.com/tools">
 
   <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    android:maxSdkVersion="32" />
+  <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
   <application
     android:allowBackup="true"
@@ -14,10 +17,12 @@
     android:supportsRtl="true"
     android:theme="@style/Theme.CuidandoDeVocê"
     android:usesCleartextTraffic="true"
-    tools:targetApi="33">
+    tools:targetApi="34">
     <activity
       android:name=".ForgotPassword"
-      android:exported="false" />
+      android:exported="false"
+      android:screenOrientation="portrait"
+      tools:ignore="LockedOrientationActivity" />
     <activity
       android:name=".Notificacoes"
       android:exported="false"
